python/testData/quickFixes/PyAddImportQuickFixTest/beforeImportBelowFileCommentBlock/main.py
#file related comment
#second file related comment
import b


print(b)
<error descr="Unresolved reference 'a'"><caret>a</error>